<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".View.Instructions.InstructionsActivity">

        <TextView
            android:id="@+id/instruction_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="@dimen/menu_title"
            android:text="@string/instruction_how_to_play" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:text="@string/how_to_play_intro"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:text="@string/how_to_play_horizontally"/>
        <ImageView
            android:id="@+id/img_horizontal_win_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/horizontal_win"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:text="@string/how_to_play_vertically"/>
        <ImageView
            android:id="@+id/img_vertical_win_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textSize="20sp"
            android:text="@string/how_to_play_diagonally"/>
        <ImageView
            android:id="@+id/img_diagonal_win_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>