<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#FDFDFD"
    tools:context=".View.GameActivity">


    <GridView
        android:id="@+id/game_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:horizontalSpacing="2dp"
        android:numColumns="3"
        android:verticalSpacing="2dp"
        app:layout_constraintBottom_toTopOf="@id/moves_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_status_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/moves_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/extra_turn_button"
            android:layout_width="@dimen/move_button_width"
            android:layout_height="wrap_content"
            android:text="@string/extra_turn"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/end_turn_button"
            app:layout_constraintEnd_toEndOf="@id/moves_layout"
            app:layout_constraintStart_toEndOf="@id/place_piece_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="@dimen/move_button_width"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/increase_grid_button"
            app:layout_constraintEnd_toEndOf="@id/moves_layout" />


        <Button
            android:id="@+id/swap_button"
            android:layout_width="@dimen/move_button_width"
            android:layout_height="wrap_content"
            android:text="@string/swap"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/increase_grid_button"
            app:layout_constraintStart_toStartOf="@id/moves_layout" />


        <Button
            android:id="@+id/place_piece_button"
            android:layout_width="@dimen/move_button_width"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/end_turn_button"
            app:layout_constraintEnd_toStartOf="@id/extra_turn_button"
            app:layout_constraintStart_toStartOf="@id/moves_layout" />


        <Button
            android:id="@+id/end_turn_button"
            android:layout_width="@dimen/move_button_width"
            android:layout_height="wrap_content"
            android:text="@string/end_turn"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/increase_grid_button"
            app:layout_constraintEnd_toEndOf="@id/delete_button"
            app:layout_constraintStart_toStartOf="@id/swap_button" />


        <Button
            android:id="@+id/increase_grid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_size"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/turn_number_text"
            app:layout_constraintEnd_toEndOf="@id/moves_layout"
            app:layout_constraintStart_toStartOf="@id/moves_layout" />

        <TextView
            android:id="@+id/turn_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#5818D1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/moves_layout"
            app:layout_constraintEnd_toEndOf="@id/moves_layout"
            app:layout_constraintStart_toStartOf="@id/moves_layout"
            tools:text="Turn: X" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player_one_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/move_piece_instructions_text"
            app:layout_constraintStart_toStartOf="@id/game_status_layout"
            tools:text="Player One: X" />

        <TextView
            android:id="@+id/player_two_points_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@id/move_piece_instructions_text"
            app:layout_constraintEnd_toEndOf="@id/game_status_layout"
            tools:text="Player Two: X" />

        <TextView
            android:id="@+id/game_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/game_status_layout"
            app:layout_constraintEnd_toEndOf="@id/game_status_layout"
            app:layout_constraintStart_toStartOf="@id/game_status_layout"
            tools:text="Player has gained a turn!" />


        <TextView
            android:id="@+id/move_piece_instructions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_a_piece_to_move"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/game_status_text"
            app:layout_constraintEnd_toEndOf="@id/game_status_layout"
            app:layout_constraintStart_toStartOf="@id/game_status_layout"
            tools:text="Select a piece to move"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/player_turn_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_turn_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/move_piece_instructions_text"
            app:layout_constraintEnd_toStartOf="@id/player_two_points_text"
            app:layout_constraintStart_toEndOf="@id/player_one_points_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>